--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">SDK Sample</string>
 
     <!-- Strings related to login -->
-    <string name="prompt_email">Type Username Here</string>
+    <string name="prompt_email">e.g Email, Phone number, etc</string>
     <string name="prompt_password">Type Password Here</string>
     <string name="prompt_displayname">Type Display Name Here</string>
     <string name="action_sign_in">LOGIN</string>
