--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SDK Sample</string>
+    <string name="app_name">Qiscus Customer Service</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">e.g Email, Phone number, etc</string>
